--- a/vue-ssr-client-manifest.json
+++ b/vue-ssr-client-manifest.json
@@ -1,24 +1,37 @@
 {
   "publicPath": "/minipress/",
   "all": [
-    "15.style.css",
-    "5.style.css",
-    "assets/js/10.js",
+    "28.style.css",
+    "7.style.css",
     "assets/js/11.js",
     "assets/js/12.js",
     "assets/js/13.js",
     "assets/js/14.js",
     "assets/js/15.js",
-    "assets/js/8.js",
-    "assets/js/9.js",
+    "assets/js/16.js",
+    "assets/js/17.js",
+    "assets/js/18.js",
+    "assets/js/19.js",
+    "assets/js/20.js",
+    "assets/js/21.js",
+    "assets/js/22.js",
+    "assets/js/23.js",
+    "assets/js/24.js",
+    "assets/js/25.js",
+    "assets/js/26.js",
+    "assets/js/27.js",
+    "assets/js/28.js",
     "assets/js/app.js",
+    "assets/js/page--2105bb68.js",
     "assets/js/page--323ede5c.js",
     "assets/js/page--43fa1dd0.js",
+    "assets/js/page--4b0e87ec.js",
     "assets/js/page--4dcd7602.js",
     "assets/js/page--85a15be2.js",
     "assets/js/page--90f8fd5e.js",
     "assets/js/page--c9680e70.js",
     "assets/js/page--e6d50b2e.js",
+    "assets/js/page--plugins--excerpt-sample.js",
     "style.css"
   ],
   "initial": [
@@ -26,447 +39,703 @@
     "assets/js/app.js"
   ],
   "async": [
-    "15.style.css",
-    "5.style.css",
-    "assets/js/10.js",
+    "28.style.css",
+    "7.style.css",
     "assets/js/11.js",
     "assets/js/12.js",
     "assets/js/13.js",
     "assets/js/14.js",
     "assets/js/15.js",
-    "assets/js/8.js",
-    "assets/js/9.js",
+    "assets/js/16.js",
+    "assets/js/17.js",
+    "assets/js/18.js",
+    "assets/js/19.js",
+    "assets/js/20.js",
+    "assets/js/21.js",
+    "assets/js/22.js",
+    "assets/js/23.js",
+    "assets/js/24.js",
+    "assets/js/25.js",
+    "assets/js/26.js",
+    "assets/js/27.js",
+    "assets/js/28.js",
+    "assets/js/page--2105bb68.js",
     "assets/js/page--323ede5c.js",
     "assets/js/page--43fa1dd0.js",
+    "assets/js/page--4b0e87ec.js",
     "assets/js/page--4dcd7602.js",
     "assets/js/page--85a15be2.js",
     "assets/js/page--90f8fd5e.js",
     "assets/js/page--c9680e70.js",
-    "assets/js/page--e6d50b2e.js"
+    "assets/js/page--e6d50b2e.js",
+    "assets/js/page--plugins--excerpt-sample.js"
   ],
   "modules": {
+    "24018226": [
+      2
+    ],
     "95a9d01c": [
-      18,
-      10
+      31,
+      20
     ],
     "387ccf72": [
-      18,
-      10
+      31,
+      20
     ],
     "cbd4e166": [
-      18,
-      10
+      31,
+      20
     ],
     "426991fb": [
-      18,
-      10
+      31,
+      20
     ],
     "3762e6a4": [
-      18,
-      10
+      31,
+      20
     ],
     "5a35176c": [
-      18,
-      10
+      31,
+      20
     ],
     "4419de98": [
-      18,
-      10
+      31,
+      20
     ],
     "76a4ffe6": [
-      18,
-      10
+      31,
+      20
     ],
     "4f31d6cf": [
-      18,
-      10
+      31,
+      20
     ],
     "60a624f9": [
-      18,
-      10
+      31,
+      20
     ],
     "0427a7ee": [
-      18,
-      10
+      31,
+      20
+    ],
+    "d4120888": [
+      31,
+      20
+    ],
+    "6aa1b0c0": [
+      31,
+      20
+    ],
+    "82a26034": [
+      31,
+      20
     ],
     "49ff7cb4": [
-      18,
-      10
+      31,
+      20
     ],
     "4336dca0": [
-      18,
-      10
+      31,
+      20
+    ],
+    "b50fc9c2": [
+      31,
+      20
     ],
     "7ecbc547": [
-      18,
-      10
+      31,
+      20
     ],
     "bb2f4c5a": [
-      18,
-      10
+      31,
+      20
+    ],
+    "dcbc1fac": [
+      31,
+      20
+    ],
+    "4f33cad8": [
+      31,
+      20
+    ],
+    "11363de1": [
+      31,
+      20
     ],
     "65752c25": [
-      18,
-      10
+      31,
+      20
     ],
     "381c336e": [
-      18,
-      10
+      31,
+      20
     ],
     "b4cbf296": [
-      18,
-      10
+      31,
+      20
     ],
     "8e2430c4": [
-      18,
-      10
+      31,
+      20
     ],
     "1adaa3ce": [
-      18,
-      10
+      31,
+      20
     ],
     "773510fa": [
-      18,
-      10
+      31,
+      20
     ],
     "db1e37cc": [
-      18,
-      10
+      31,
+      20
     ],
     "07fb228a": [
-      18,
-      10
+      31,
+      20
     ],
     "030ce01d": [
-      18,
-      10
+      31,
+      20
     ],
     "4132c8a6": [
-      18,
-      10
+      31,
+      20
     ],
     "bba014b0": [
-      18,
-      10
+      31,
+      20
     ],
     "f4f1076a": [
-      18,
-      10
+      31,
+      20
     ],
     "fd34a40e": [
-      18,
-      10
+      31,
+      20
     ],
     "10842ce6": [
-      18,
-      10
+      31,
+      20
     ],
     "83513d70": [
-      18,
-      10
+      31,
+      20
     ],
     "754d63b2": [
-      18,
-      10
+      31,
+      20
     ],
     "c97683ea": [
-      18,
-      10
+      31,
+      20
     ],
     "4ddbe111": [
-      18,
-      10
+      31,
+      20
     ],
     "3c53cf8a": [
-      18,
-      10
+      31,
+      20
     ],
     "3ce84807": [
-      18,
-      10
+      31,
+      20
+    ],
+    "99cc93f4": [
+      31,
+      20
+    ],
+    "08798536": [
+      31,
+      20
+    ],
+    "c5059ba0": [
+      31,
+      20
     ],
     "78ae8032": [
-      18,
-      10
+      31,
+      20
     ],
     "09debea4": [
-      18,
-      10
+      31,
+      20
+    ],
+    "72b475e9": [
+      31,
+      20
     ],
     "5756a8de": [
-      18,
-      10
+      31,
+      20
     ],
     "42efbd95": [
-      18,
-      10
+      31,
+      20
+    ],
+    "d27e78c0": [
+      31,
+      20
+    ],
+    "25e8c164": [
+      31,
+      20
+    ],
+    "02e6bd57": [
+      31,
+      20
     ],
     "2f7e4232": [
-      18,
-      10
+      31,
+      20
     ],
     "22ee0247": [
-      18,
-      10
+      31,
+      20
     ],
     "0cdda333": [
-      18,
-      10
+      31,
+      20
     ],
     "3a1ddae0": [
-      18,
-      10
+      31,
+      20
     ],
     "c7ead1e0": [
-      18,
-      10
+      31,
+      20
     ],
     "6933ec81": [
-      18,
-      10
+      31,
+      20
     ],
     "7c6d0c90": [
-      18,
-      10
+      31,
+      20
     ],
     "5b5fbe85": [
-      18,
-      10
+      31,
+      20
     ],
     "68a06702": [
-      18,
-      10
+      31,
+      20
     ],
     "5963f189": [
-      18,
-      10
+      31,
+      20
     ],
     "02025afe": [
-      18,
-      10
+      31,
+      20
     ],
     "76d094f0": [
-      18,
-      10
+      31,
+      20
     ],
     "8b285d1a": [
-      18,
-      10
+      31,
+      20
+    ],
+    "702eb70d": [
+      4
+    ],
+    "42a87b42": [
+      4
+    ],
+    "bdee3226": [
+      7
+    ],
+    "7382ab22": [
+      7
+    ],
+    "1d086366": [
+      6
+    ],
+    "7814dafc": [
+      6
+    ],
+    "59d8d36d": [
+      5
+    ],
+    "2c5297a2": [
+      5
+    ],
+    "8fd45f0a": [
+      8
+    ],
+    "3e5209f0": [
+      8
+    ],
+    "4b6d62ad": [
+      3
+    ],
+    "1de726e2": [
+      3
     ],
     "09eab40d": [
-      8
+      9
     ],
     "1c03377c": [
-      8
+      9
     ],
     "e22aaee4": [
-      9
+      10
     ],
     "ca94520e": [
-      9
+      10
     ],
     "f93372aa": [
-      2
+      11
     ],
     "2a7013d6": [
-      2
+      11
     ],
-    "e2f373d2": [
-      3
-    ],
-    "3eb5aa0c": [
-      3
-    ],
-    "cef0b076": [
-      4
-    ],
-    "5e2cdeb0": [
-      4
-    ],
-    "7da7f8ee": [
-      5
-    ],
-    "43852c7e": [
-      5
-    ],
-    "4668791e": [
-      6
-    ],
-    "cd987748": [
-      6
-    ],
-    "c21863e0": [
-      8
-    ],
-    "4e653eeb": [
-      8
-    ],
-    "3e898de9": [
-      9
-    ],
-    "7fb9e770": [
-      9
-    ],
-    "a5f71024": [
-      2
-    ],
-    "4459b68d": [
-      2
-    ],
-    "ed437b88": [
-      3
-    ],
-    "71b86e85": [
-      3
-    ],
-    "33b80fbb": [
-      4
-    ],
-    "065c61b2": [
-      4
-    ],
-    "a5c06098": [
-      5
-    ],
-    "1c669a12": [
-      5
-    ],
-    "58b28916": [
-      6
-    ],
-    "fe58e15a": [
-      6
-    ],
-    "695f3d38": [
-      8
-    ],
-    "40606ad2": [
-      9
-    ],
-    "cd07c518": [
-      2
-    ],
-    "5d5548e2": [
-      3
-    ],
-    "e7e4d964": [
-      4
-    ],
-    "f3b2cd58": [
-      5
-    ],
-    "1eaeb9fa": [
-      6
-    ],
-    "195c653a": [
+    "5314bafa": [
       12
     ],
-    "d58b2406": [
-      17
+    "568906ee": [
+      12
     ],
-    "4c86b04f": [
-      16
-    ],
-    "1650993a": [
-      14
-    ],
-    "3ddf6e1d": [
+    "e2f373d2": [
       13
     ],
-    "93493b92": [
+    "3eb5aa0c": [
+      13
+    ],
+    "cef0b076": [
+      14
+    ],
+    "5e2cdeb0": [
+      14
+    ],
+    "7da7f8ee": [
+      15
+    ],
+    "43852c7e": [
+      15
+    ],
+    "5946caf2": [
+      16
+    ],
+    "d743cf32": [
+      16
+    ],
+    "4668791e": [
+      17
+    ],
+    "cd987748": [
+      17
+    ],
+    "7f0df9bc": [
+      2
+    ],
+    "0426d3c7": [
+      18
+    ],
+    "7ee2569c": [
+      18
+    ],
+    "47eb3ac8": [
+      4
+    ],
+    "0af3e42a": [
+      4
+    ],
+    "4e21ca92": [
+      7
+    ],
+    "4616b36a": [
+      7
+    ],
+    "1ee5821c": [
+      6
+    ],
+    "46d7b82b": [
+      6
+    ],
+    "0083ff56": [
+      5
+    ],
+    "f54d7e6a": [
+      5
+    ],
+    "695166a1": [
+      8
+    ],
+    "5b7d1d2e": [
+      8
+    ],
+    "61c7d2a6": [
+      3
+    ],
+    "cc82f9ea": [
+      3
+    ],
+    "5b4eb470": [
+      9
+    ],
+    "4e653eeb": [
+      9
+    ],
+    "6703b2c6": [
+      10
+    ],
+    "7fb9e770": [
+      10
+    ],
+    "1aa7409b": [
       11
+    ],
+    "4459b68d": [
+      11
+    ],
+    "703a050c": [
+      12
+    ],
+    "5ffbbb36": [
+      12
+    ],
+    "aa931400": [
+      13
+    ],
+    "71b86e85": [
+      13
+    ],
+    "1add2046": [
+      14
+    ],
+    "065c61b2": [
+      14
+    ],
+    "18167fb4": [
+      15
+    ],
+    "1c669a12": [
+      15
+    ],
+    "009bbbf6": [
+      16
+    ],
+    "b0beaa60": [
+      16
+    ],
+    "09e6f448": [
+      17
+    ],
+    "fe58e15a": [
+      17
+    ],
+    "a4782f74": [
+      2
+    ],
+    "9538c36a": [
+      2
+    ],
+    "08b0a454": [
+      18
+    ],
+    "09c4f7a9": [
+      18
+    ],
+    "0dd27c64": [
+      4
+    ],
+    "4e575544": [
+      7
+    ],
+    "c4ac6cb8": [
+      6
+    ],
+    "52e03dc4": [
+      5
+    ],
+    "eb224874": [
+      8
+    ],
+    "256d4304": [
+      3
+    ],
+    "695f3d38": [
+      9
+    ],
+    "40606ad2": [
+      10
+    ],
+    "cd07c518": [
+      11
+    ],
+    "462b66e8": [
+      12
+    ],
+    "5d5548e2": [
+      13
+    ],
+    "e7e4d964": [
+      14
+    ],
+    "f3b2cd58": [
+      15
+    ],
+    "bac8c1ee": [
+      16
+    ],
+    "1eaeb9fa": [
+      17
+    ],
+    "b4a62578": [
+      2
+    ],
+    "731a0b60": [
+      18
+    ],
+    "195c653a": [
+      23
+    ],
+    "d58b2406": [
+      29
+    ],
+    "80dbbc36": [
+      24
+    ],
+    "4c86b04f": [
+      28
+    ],
+    "1650993a": [
+      26
+    ],
+    "3ddf6e1d": [
+      25
+    ],
+    "9fe9c1f0": [
+      30
+    ],
+    "93493b92": [
+      22
+    ],
+    "071f2ca1": [
+      21
     ],
     "6118670a": [
       1,
-      15
+      27
     ],
     "1f7df736": [
       0,
-      7
+      19
     ],
     "23bc9071": [
-      18,
-      10
+      31,
+      20
     ],
     "ddd0a936": [
-      18,
-      10
+      31,
+      20
+    ],
+    "05987754": [
+      31,
+      20
+    ],
+    "537552c0": [
+      31,
+      20
+    ],
+    "3c744324": [
+      31,
+      20
+    ],
+    "55a75ae6": [
+      31,
+      20
+    ],
+    "022a1a6e": [
+      31,
+      20
+    ],
+    "0844e712": [
+      31,
+      20
     ],
     "2e676dce": [
-      18,
-      10
+      31,
+      20
     ],
     "3e3b8b48": [
-      18,
-      10
+      31,
+      20
     ],
     "5f9445cb": [
-      18,
-      10
+      31,
+      20
     ],
     "bfaf7110": [
-      18,
-      10
+      31,
+      20
     ],
     "06309562": [
-      18,
-      10
+      31,
+      20
     ],
     "06b66a42": [
-      18,
-      10
-    ],
-    "bfdbf006": [
-      18,
-      10
-    ],
-    "22b17574": [
-      18,
-      10
-    ],
-    "9ba2e26c": [
-      18,
-      10
-    ],
-    "bff5e8a0": [
-      18,
-      10
+      31,
+      20
     ],
     "169f109f": [
-      18,
-      10
+      31,
+      20
+    ],
+    "bfdbf006": [
+      31,
+      20
+    ],
+    "70d65710": [
+      31,
+      20
+    ],
+    "22b17574": [
+      31,
+      20
+    ],
+    "9ba2e26c": [
+      31,
+      20
+    ],
+    "bff5e8a0": [
+      31,
+      20
     ],
     "33f7d84a": [
-      18,
-      10
+      31,
+      20
     ],
     "5b1c7691": [
-      18,
-      10
+      31,
+      20
     ],
     "facd8d64": [
-      18,
-      10
+      31,
+      20
     ],
     "34186eba": [
-      18,
-      10
+      31,
+      20
     ],
     "435522ba": [
-      18,
-      10
+      31,
+      20
     ],
     "57b2850e": [
-      18,
-      10
+      31,
+      20
     ],
     "c20f8e3a": [
-      18,
-      10
+      31,
+      20
     ],
     "506fc440": [
-      18,
-      10
+      31,
+      20
     ]
   }
 }
