--- a/_packages/config/package.json
+++ b/_packages/config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@minipress/cli",
+  "name": "@minipress/config",
   "version": "0.8.0",
   "description": "",
   "main": "src/index.js",
@@ -13,7 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cac": "^6.5.3"
+    "@minipress/utils": "^0.8.0"
   },
-  "gitHead": "c14733c38e9095a558c6a329bdce220b8b6bf95d"
+  "devDependencies": {
+    "@minipress/types": "^0.8.0",
+    "@types/hapi__joi": "^16.0.2"
+  }
 }
