--- a/_packages/utils/package.json
+++ b/_packages/utils/package.json
@@ -25,7 +25,8 @@
     "fs-extra": "^8.1.0",
     "globby": "^10.0.1",
     "hash-sum": "^2.0.0",
-    "slugify": "^1.3.5"
+    "slugify": "^1.3.5",
+    "nanoid": "^2.1.6"
   },
   "types": "index.d.ts",
   "devDependencies": {
