--- a/_packages/minipress/package.json
+++ b/_packages/minipress/package.json
@@ -20,6 +20,9 @@
     "minipress": "./src/cli/cli-entry.js"
   },
   "dependencies": {
+    "terser-webpack-plugin": "^2.2.1",
+    "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "@babel/core": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.5.5",
@@ -57,10 +60,8 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "loader-utils": "^1.2.3",
-    "mini-css-extract-plugin": "^0.8.0",
     "nanoid": "^2.1.1",
     "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "polka": "^0.5.2",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
