--- a/_packages/utils/package.json
+++ b/_packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/utils",
-  "version": "0.8.0",
+  "version": "0.8.1",
   "description": "",
   "main": "src/index.js",
   "private": false,
@@ -25,8 +25,8 @@
     "fs-extra": "^8.1.0",
     "globby": "^10.0.1",
     "hash-sum": "^2.0.0",
-    "slugify": "^1.3.5",
-    "nanoid": "^2.1.6"
+    "nanoid": "^2.1.6",
+    "slugify": "^1.3.5"
   },
   "types": "index.d.ts",
   "devDependencies": {
