--- a/vue-ssr-client-manifest.json
+++ b/vue-ssr-client-manifest.json
@@ -2,7 +2,9 @@
   "publicPath": "/minipress/",
   "all": [
     "28.style.css",
+    "28.styles.css",
     "7.style.css",
+    "7.styles.css",
     "assets/js/11.js",
     "assets/js/12.js",
     "assets/js/13.js",
@@ -22,6 +24,7 @@
     "assets/js/27.js",
     "assets/js/28.js",
     "assets/js/app.js",
+    "assets/js/app.js.LICENSE",
     "assets/js/page--2105bb68.js",
     "assets/js/page--323ede5c.js",
     "assets/js/page--43fa1dd0.js",
@@ -32,15 +35,19 @@
     "assets/js/page--c9680e70.js",
     "assets/js/page--e6d50b2e.js",
     "assets/js/page--plugins--excerpt-sample.js",
-    "style.css"
+    "style.css",
+    "styles.css"
   ],
   "initial": [
+    "styles.css",
     "style.css",
     "assets/js/app.js"
   ],
   "async": [
     "28.style.css",
+    "28.styles.css",
     "7.style.css",
+    "7.styles.css",
     "assets/js/11.js",
     "assets/js/12.js",
     "assets/js/13.js",
@@ -72,670 +79,766 @@
   ],
   "modules": {
     "24018226": [
-      2
+      4
     ],
     "95a9d01c": [
-      31,
-      20
-    ],
-    "387ccf72": [
-      31,
-      20
-    ],
-    "cbd4e166": [
-      31,
-      20
-    ],
-    "426991fb": [
-      31,
-      20
-    ],
-    "3762e6a4": [
-      31,
-      20
-    ],
-    "5a35176c": [
-      31,
-      20
-    ],
-    "4419de98": [
-      31,
-      20
-    ],
-    "76a4ffe6": [
-      31,
-      20
-    ],
-    "4f31d6cf": [
-      31,
-      20
-    ],
-    "60a624f9": [
-      31,
-      20
-    ],
-    "0427a7ee": [
-      31,
-      20
-    ],
-    "d4120888": [
-      31,
-      20
-    ],
-    "6aa1b0c0": [
-      31,
-      20
-    ],
-    "82a26034": [
-      31,
-      20
-    ],
-    "49ff7cb4": [
-      31,
-      20
-    ],
-    "4336dca0": [
-      31,
-      20
-    ],
-    "b50fc9c2": [
-      31,
-      20
-    ],
-    "7ecbc547": [
-      31,
-      20
-    ],
-    "bb2f4c5a": [
-      31,
-      20
-    ],
-    "dcbc1fac": [
-      31,
-      20
-    ],
-    "4f33cad8": [
-      31,
-      20
-    ],
-    "11363de1": [
-      31,
-      20
-    ],
-    "65752c25": [
-      31,
-      20
-    ],
-    "381c336e": [
-      31,
-      20
-    ],
-    "b4cbf296": [
-      31,
-      20
-    ],
-    "8e2430c4": [
-      31,
-      20
-    ],
-    "1adaa3ce": [
-      31,
-      20
-    ],
-    "773510fa": [
-      31,
-      20
-    ],
-    "db1e37cc": [
-      31,
-      20
-    ],
-    "07fb228a": [
-      31,
-      20
-    ],
-    "030ce01d": [
-      31,
-      20
-    ],
-    "4132c8a6": [
-      31,
-      20
-    ],
-    "bba014b0": [
-      31,
-      20
-    ],
-    "f4f1076a": [
-      31,
-      20
-    ],
-    "fd34a40e": [
-      31,
-      20
-    ],
-    "10842ce6": [
-      31,
-      20
-    ],
-    "83513d70": [
-      31,
-      20
-    ],
-    "754d63b2": [
-      31,
-      20
-    ],
-    "c97683ea": [
-      31,
-      20
-    ],
-    "4ddbe111": [
-      31,
-      20
-    ],
-    "3c53cf8a": [
-      31,
-      20
-    ],
-    "3ce84807": [
-      31,
-      20
-    ],
-    "99cc93f4": [
-      31,
-      20
-    ],
-    "08798536": [
-      31,
-      20
-    ],
-    "c5059ba0": [
-      31,
-      20
-    ],
-    "78ae8032": [
-      31,
-      20
-    ],
-    "09debea4": [
-      31,
-      20
-    ],
-    "72b475e9": [
-      31,
-      20
-    ],
-    "5756a8de": [
-      31,
-      20
-    ],
-    "42efbd95": [
-      31,
-      20
-    ],
-    "d27e78c0": [
-      31,
-      20
-    ],
-    "25e8c164": [
-      31,
-      20
-    ],
-    "02e6bd57": [
-      31,
-      20
-    ],
-    "2f7e4232": [
-      31,
-      20
-    ],
-    "22ee0247": [
-      31,
-      20
-    ],
-    "0cdda333": [
-      31,
-      20
-    ],
-    "3a1ddae0": [
-      31,
-      20
-    ],
-    "c7ead1e0": [
-      31,
-      20
-    ],
-    "6933ec81": [
-      31,
-      20
-    ],
-    "7c6d0c90": [
-      31,
-      20
-    ],
-    "5b5fbe85": [
-      31,
-      20
-    ],
-    "68a06702": [
-      31,
-      20
-    ],
-    "5963f189": [
-      31,
-      20
-    ],
-    "02025afe": [
-      31,
-      20
-    ],
-    "76d094f0": [
-      31,
-      20
-    ],
-    "8b285d1a": [
-      31,
-      20
-    ],
-    "702eb70d": [
-      4
-    ],
-    "42a87b42": [
-      4
-    ],
-    "bdee3226": [
-      7
-    ],
-    "7382ab22": [
-      7
-    ],
-    "1d086366": [
-      6
-    ],
-    "7814dafc": [
-      6
-    ],
-    "59d8d36d": [
-      5
-    ],
-    "2c5297a2": [
-      5
-    ],
-    "8fd45f0a": [
-      8
-    ],
-    "3e5209f0": [
-      8
-    ],
-    "4b6d62ad": [
-      3
-    ],
-    "1de726e2": [
-      3
-    ],
-    "09eab40d": [
-      9
-    ],
-    "1c03377c": [
-      9
-    ],
-    "e22aaee4": [
-      10
-    ],
-    "ca94520e": [
-      10
-    ],
-    "f93372aa": [
-      11
-    ],
-    "2a7013d6": [
-      11
-    ],
-    "5314bafa": [
-      12
-    ],
-    "568906ee": [
-      12
-    ],
-    "e2f373d2": [
-      13
-    ],
-    "3eb5aa0c": [
-      13
-    ],
-    "cef0b076": [
-      14
-    ],
-    "5e2cdeb0": [
-      14
-    ],
-    "7da7f8ee": [
-      15
-    ],
-    "43852c7e": [
-      15
-    ],
-    "5946caf2": [
-      16
-    ],
-    "d743cf32": [
-      16
-    ],
-    "4668791e": [
-      17
-    ],
-    "cd987748": [
-      17
-    ],
-    "7f0df9bc": [
-      2
-    ],
-    "0426d3c7": [
-      18
-    ],
-    "7ee2569c": [
-      18
-    ],
-    "47eb3ac8": [
-      4
-    ],
-    "0af3e42a": [
-      4
-    ],
-    "4e21ca92": [
-      7
-    ],
-    "4616b36a": [
-      7
-    ],
-    "1ee5821c": [
-      6
-    ],
-    "46d7b82b": [
-      6
-    ],
-    "0083ff56": [
-      5
-    ],
-    "f54d7e6a": [
-      5
-    ],
-    "695166a1": [
-      8
-    ],
-    "5b7d1d2e": [
-      8
-    ],
-    "61c7d2a6": [
-      3
-    ],
-    "cc82f9ea": [
-      3
-    ],
-    "5b4eb470": [
-      9
-    ],
-    "4e653eeb": [
-      9
-    ],
-    "6703b2c6": [
-      10
-    ],
-    "7fb9e770": [
-      10
-    ],
-    "1aa7409b": [
-      11
-    ],
-    "4459b68d": [
-      11
-    ],
-    "703a050c": [
-      12
-    ],
-    "5ffbbb36": [
-      12
-    ],
-    "aa931400": [
-      13
-    ],
-    "71b86e85": [
-      13
-    ],
-    "1add2046": [
-      14
-    ],
-    "065c61b2": [
-      14
-    ],
-    "18167fb4": [
-      15
-    ],
-    "1c669a12": [
-      15
-    ],
-    "009bbbf6": [
-      16
-    ],
-    "b0beaa60": [
-      16
-    ],
-    "09e6f448": [
-      17
-    ],
-    "fe58e15a": [
-      17
-    ],
-    "a4782f74": [
-      2
-    ],
-    "9538c36a": [
-      2
-    ],
-    "08b0a454": [
-      18
-    ],
-    "09c4f7a9": [
-      18
-    ],
-    "0dd27c64": [
-      4
-    ],
-    "4e575544": [
-      7
-    ],
-    "c4ac6cb8": [
-      6
-    ],
-    "52e03dc4": [
-      5
-    ],
-    "eb224874": [
-      8
-    ],
-    "256d4304": [
-      3
-    ],
-    "695f3d38": [
-      9
-    ],
-    "40606ad2": [
-      10
-    ],
-    "cd07c518": [
-      11
-    ],
-    "462b66e8": [
-      12
-    ],
-    "5d5548e2": [
-      13
-    ],
-    "e7e4d964": [
-      14
-    ],
-    "f3b2cd58": [
-      15
-    ],
-    "bac8c1ee": [
-      16
-    ],
-    "1eaeb9fa": [
-      17
-    ],
-    "b4a62578": [
-      2
-    ],
-    "731a0b60": [
-      18
-    ],
-    "195c653a": [
-      23
-    ],
-    "d58b2406": [
-      29
-    ],
-    "80dbbc36": [
-      24
-    ],
-    "4c86b04f": [
-      28
-    ],
-    "1650993a": [
-      26
-    ],
-    "3ddf6e1d": [
-      25
-    ],
-    "9fe9c1f0": [
-      30
-    ],
-    "93493b92": [
+      35,
+      34,
       22
     ],
-    "071f2ca1": [
-      21
+    "387ccf72": [
+      35,
+      34,
+      22
     ],
-    "6118670a": [
-      1,
-      27
+    "cbd4e166": [
+      35,
+      34,
+      22
     ],
-    "1f7df736": [
-      0,
+    "426991fb": [
+      35,
+      34,
+      22
+    ],
+    "3762e6a4": [
+      35,
+      34,
+      22
+    ],
+    "5a35176c": [
+      35,
+      34,
+      22
+    ],
+    "4419de98": [
+      35,
+      34,
+      22
+    ],
+    "76a4ffe6": [
+      35,
+      34,
+      22
+    ],
+    "4f31d6cf": [
+      35,
+      34,
+      22
+    ],
+    "60a624f9": [
+      35,
+      34,
+      22
+    ],
+    "0427a7ee": [
+      35,
+      34,
+      22
+    ],
+    "d4120888": [
+      35,
+      34,
+      22
+    ],
+    "6aa1b0c0": [
+      35,
+      34,
+      22
+    ],
+    "82a26034": [
+      35,
+      34,
+      22
+    ],
+    "49ff7cb4": [
+      35,
+      34,
+      22
+    ],
+    "4336dca0": [
+      35,
+      34,
+      22
+    ],
+    "b50fc9c2": [
+      35,
+      34,
+      22
+    ],
+    "7ecbc547": [
+      35,
+      34,
+      22
+    ],
+    "bb2f4c5a": [
+      35,
+      34,
+      22
+    ],
+    "dcbc1fac": [
+      35,
+      34,
+      22
+    ],
+    "4f33cad8": [
+      35,
+      34,
+      22
+    ],
+    "11363de1": [
+      35,
+      34,
+      22
+    ],
+    "65752c25": [
+      35,
+      34,
+      22
+    ],
+    "381c336e": [
+      35,
+      34,
+      22
+    ],
+    "b4cbf296": [
+      35,
+      34,
+      22
+    ],
+    "8e2430c4": [
+      35,
+      34,
+      22
+    ],
+    "1adaa3ce": [
+      35,
+      34,
+      22
+    ],
+    "773510fa": [
+      35,
+      34,
+      22
+    ],
+    "db1e37cc": [
+      35,
+      34,
+      22
+    ],
+    "07fb228a": [
+      35,
+      34,
+      22
+    ],
+    "030ce01d": [
+      35,
+      34,
+      22
+    ],
+    "4132c8a6": [
+      35,
+      34,
+      22
+    ],
+    "bba014b0": [
+      35,
+      34,
+      22
+    ],
+    "f4f1076a": [
+      35,
+      34,
+      22
+    ],
+    "fd34a40e": [
+      35,
+      34,
+      22
+    ],
+    "10842ce6": [
+      35,
+      34,
+      22
+    ],
+    "83513d70": [
+      35,
+      34,
+      22
+    ],
+    "754d63b2": [
+      35,
+      34,
+      22
+    ],
+    "c97683ea": [
+      35,
+      34,
+      22
+    ],
+    "4ddbe111": [
+      35,
+      34,
+      22
+    ],
+    "3c53cf8a": [
+      35,
+      34,
+      22
+    ],
+    "3ce84807": [
+      35,
+      34,
+      22
+    ],
+    "99cc93f4": [
+      35,
+      34,
+      22
+    ],
+    "08798536": [
+      35,
+      34,
+      22
+    ],
+    "c5059ba0": [
+      35,
+      34,
+      22
+    ],
+    "78ae8032": [
+      35,
+      34,
+      22
+    ],
+    "09debea4": [
+      35,
+      34,
+      22
+    ],
+    "72b475e9": [
+      35,
+      34,
+      22
+    ],
+    "5756a8de": [
+      35,
+      34,
+      22
+    ],
+    "42efbd95": [
+      35,
+      34,
+      22
+    ],
+    "d27e78c0": [
+      35,
+      34,
+      22
+    ],
+    "25e8c164": [
+      35,
+      34,
+      22
+    ],
+    "02e6bd57": [
+      35,
+      34,
+      22
+    ],
+    "2f7e4232": [
+      35,
+      34,
+      22
+    ],
+    "22ee0247": [
+      35,
+      34,
+      22
+    ],
+    "0cdda333": [
+      35,
+      34,
+      22
+    ],
+    "3a1ddae0": [
+      35,
+      34,
+      22
+    ],
+    "c7ead1e0": [
+      35,
+      34,
+      22
+    ],
+    "6933ec81": [
+      35,
+      34,
+      22
+    ],
+    "7c6d0c90": [
+      35,
+      34,
+      22
+    ],
+    "5b5fbe85": [
+      35,
+      34,
+      22
+    ],
+    "68a06702": [
+      35,
+      34,
+      22
+    ],
+    "5963f189": [
+      35,
+      34,
+      22
+    ],
+    "02025afe": [
+      35,
+      34,
+      22
+    ],
+    "76d094f0": [
+      35,
+      34,
+      22
+    ],
+    "8b285d1a": [
+      35,
+      34,
+      22
+    ],
+    "702eb70d": [
+      6
+    ],
+    "42a87b42": [
+      6
+    ],
+    "bdee3226": [
+      9
+    ],
+    "7382ab22": [
+      9
+    ],
+    "1d086366": [
+      8
+    ],
+    "7814dafc": [
+      8
+    ],
+    "59d8d36d": [
+      7
+    ],
+    "2c5297a2": [
+      7
+    ],
+    "8fd45f0a": [
+      10
+    ],
+    "3e5209f0": [
+      10
+    ],
+    "4b6d62ad": [
+      5
+    ],
+    "1de726e2": [
+      5
+    ],
+    "09eab40d": [
+      11
+    ],
+    "1c03377c": [
+      11
+    ],
+    "e22aaee4": [
+      12
+    ],
+    "ca94520e": [
+      12
+    ],
+    "f93372aa": [
+      13
+    ],
+    "2a7013d6": [
+      13
+    ],
+    "5314bafa": [
+      14
+    ],
+    "568906ee": [
+      14
+    ],
+    "e2f373d2": [
+      15
+    ],
+    "3eb5aa0c": [
+      15
+    ],
+    "cef0b076": [
+      16
+    ],
+    "5e2cdeb0": [
+      16
+    ],
+    "7da7f8ee": [
+      17
+    ],
+    "43852c7e": [
+      17
+    ],
+    "5946caf2": [
+      18
+    ],
+    "d743cf32": [
+      18
+    ],
+    "4668791e": [
       19
     ],
-    "23bc9071": [
-      31,
+    "cd987748": [
+      19
+    ],
+    "7f0df9bc": [
+      4
+    ],
+    "0426d3c7": [
       20
+    ],
+    "7ee2569c": [
+      20
+    ],
+    "47eb3ac8": [
+      6
+    ],
+    "0af3e42a": [
+      6
+    ],
+    "4e21ca92": [
+      9
+    ],
+    "4616b36a": [
+      9
+    ],
+    "1ee5821c": [
+      8
+    ],
+    "46d7b82b": [
+      8
+    ],
+    "0083ff56": [
+      7
+    ],
+    "f54d7e6a": [
+      7
+    ],
+    "695166a1": [
+      10
+    ],
+    "5b7d1d2e": [
+      10
+    ],
+    "61c7d2a6": [
+      5
+    ],
+    "cc82f9ea": [
+      5
+    ],
+    "5b4eb470": [
+      11
+    ],
+    "4e653eeb": [
+      11
+    ],
+    "6703b2c6": [
+      12
+    ],
+    "7fb9e770": [
+      12
+    ],
+    "1aa7409b": [
+      13
+    ],
+    "4459b68d": [
+      13
+    ],
+    "703a050c": [
+      14
+    ],
+    "5ffbbb36": [
+      14
+    ],
+    "0fd68244": [
+      15
+    ],
+    "71b86e85": [
+      15
+    ],
+    "5f2af3ee": [
+      16
+    ],
+    "065c61b2": [
+      16
+    ],
+    "27b4cb81": [
+      17
+    ],
+    "1c669a12": [
+      17
+    ],
+    "009bbbf6": [
+      18
+    ],
+    "b0beaa60": [
+      18
+    ],
+    "c61cb72a": [
+      19
+    ],
+    "fe58e15a": [
+      19
+    ],
+    "a4782f74": [
+      4
+    ],
+    "9538c36a": [
+      4
+    ],
+    "08b0a454": [
+      20
+    ],
+    "09c4f7a9": [
+      20
+    ],
+    "0dd27c64": [
+      6
+    ],
+    "4e575544": [
+      9
+    ],
+    "c4ac6cb8": [
+      8
+    ],
+    "52e03dc4": [
+      7
+    ],
+    "eb224874": [
+      10
+    ],
+    "256d4304": [
+      5
+    ],
+    "695f3d38": [
+      11
+    ],
+    "40606ad2": [
+      12
+    ],
+    "cd07c518": [
+      13
+    ],
+    "462b66e8": [
+      14
+    ],
+    "5d5548e2": [
+      15
+    ],
+    "e7e4d964": [
+      16
+    ],
+    "f3b2cd58": [
+      17
+    ],
+    "bac8c1ee": [
+      18
+    ],
+    "1eaeb9fa": [
+      19
+    ],
+    "b4a62578": [
+      4
+    ],
+    "731a0b60": [
+      20
+    ],
+    "195c653a": [
+      26
+    ],
+    "d58b2406": [
+      32
+    ],
+    "80dbbc36": [
+      27
+    ],
+    "4c86b04f": [
+      31
+    ],
+    "1650993a": [
+      29
+    ],
+    "3ddf6e1d": [
+      28
+    ],
+    "9fe9c1f0": [
+      33
+    ],
+    "93493b92": [
+      25
+    ],
+    "071f2ca1": [
+      24
+    ],
+    "6118670a": [
+      3,
+      2,
+      30
+    ],
+    "1f7df736": [
+      1,
+      0,
+      21
+    ],
+    "23bc9071": [
+      35,
+      34,
+      22
     ],
     "ddd0a936": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "05987754": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "537552c0": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "3c744324": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "55a75ae6": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "022a1a6e": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "0844e712": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "2e676dce": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "3e3b8b48": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "5f9445cb": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "bfaf7110": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "06309562": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "06b66a42": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "169f109f": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "bfdbf006": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "70d65710": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "22b17574": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "9ba2e26c": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "bff5e8a0": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "33f7d84a": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "5b1c7691": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "facd8d64": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "34186eba": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "435522ba": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "57b2850e": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "c20f8e3a": [
-      31,
-      20
+      35,
+      34,
+      22
     ],
     "506fc440": [
-      31,
-      20
+      35,
+      34,
+      22
     ]
   }
 }
