--- a/_packages/minipress/package.json
+++ b/_packages/minipress/package.json
@@ -29,6 +29,7 @@
     "@minipress/app": "^0.9.0",
     "@minipress/cli": "^0.9.0",
     "@minipress/code-gen": "^0.9.0",
+    "@minipress/markdown-chain": "^0.9.0",
     "@minipress/config": "^0.9.0",
     "@minipress/head-element": "^0.9.0",
     "@minipress/log": "^0.9.0",
