--- a/_packages/plugins/format-markdown/package.json
+++ b/_packages/plugins/format-markdown/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "src/index.js",
   "dependencies": {
+    "@minipress/markdown-plugins": "^0.9.0",
     "@minipress/code-gen": "^0.9.0",
-    "@minipress/markdown": "^0.9.0",
+    "@minipress/markdown-chain": "^0.9.0",
     "@minipress/utils": "^0.9.0"
   },
   "files": [
